# rimeclaw

./: CMakeLists.txt  CMakePresets.json  README.md
3rd/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
3rd/build-all/: vcpkg.json
3rd/build-dashboard/: vcpkg.json
3rd/build-lib/: vcpkg.json
3rd/build-test/: vcpkg.json
3rd/models/: download_model_urls
3rd/overlay-ports/llama-cpp/: portfile.cmake  vcpkg.json
config/: rimeclaw_config.json
config/.rimeclaw/agents/main/workspace/: BOOTSTRAP.md  IDENTITY.md  rc_plan_test.txt  rc_verify.txt  test_data.txt
config/.rimeclaw/skills/test-calc/: SKILL.md
config/.rimeclaw/skills/test-calc-py/: SKILL.md  calc.py
dashboard/: CMakeLists.txt  DashboardController.cpp  DashboardController.h  DashboardMainWindow.cpp  DashboardMainWindow.h  DashboardState.h  DashboardTheme.h  dashboard.rc  main.cpp
dashboard/imguiext/: CMakeLists.txt
dashboard/imguiext/imapp/: ImAppMainWindow.cpp  ImAppMainWindow.h
dashboard/imguiext/imterm/: misc.hpp  terminal.tpp  terminal_helpers.hpp
dashboard/panels/: AgentsPanel.cpp  AgentsPanel.h  ChatPanel.cpp  ChatPanel.h  ConfigPanel.cpp  ConfigPanel.h  CronPanel.cpp  CronPanel.h  SessionsPanel.cpp  SessionsPanel.h  SidebarPanel.cpp  SidebarPanel.h  SkillsPanel.cpp  SkillsPanel.h
dashboard/widgets/: ChatBubble.cpp  ChatBubble.h  ConsoleWidget.cpp  ConsoleWidget.h  MarkdownRenderer.cpp  MarkdownRenderer.h  ToolCallWidget.cpp  ToolCallWidget.h
rimeclaw/: CMakeLists.txt  config.cpp  config.hpp  constants.hpp  rimeclaw.cpp  rimeclaw.h
rimeclaw/common/: defer.hpp  noncopyable.hpp  parse_util.hpp  string_util.hpp  try.hpp
rimeclaw/core/: agent_loop.cpp  agent_loop.hpp  content_block.cpp  content_block.hpp  context_engine.hpp  context_pruner.cpp  context_pruner.hpp  cron_scheduler.cpp  cron_scheduler.hpp  default_context_engine.cpp  default_context_engine.hpp  memory_manager.cpp  memory_manager.hpp  memory_search.cpp  memory_search.hpp  message_commands.cpp  message_commands.hpp  mmr_reranker.cpp  mmr_reranker.hpp  multi_stage_compaction.cpp  multi_stage_compaction.hpp  prompt_builder.cpp  prompt_builder.hpp  session_compaction.cpp  session_compaction.hpp  signal_handler.cpp  signal_handler.hpp  skill_loader.cpp  skill_loader.hpp  subagent.cpp  subagent.hpp  temporal_decay.cpp  temporal_decay.hpp  usage_accumulator.cpp  usage_accumulator.hpp  vector_index.cpp  vector_index.hpp
rimeclaw/mcp/: mcp_client.hpp  mcp_tool_manager.hpp
rimeclaw/platform/: process.hpp  process_unix.cpp  process_win32.cpp
rimeclaw/plugins/: hook_manager.hpp  plugin_registry.hpp  plugin_system.hpp  sidecar_manager.hpp
rimeclaw/providers/: anthropic_provider.cpp  anthropic_provider.hpp  cooldown_tracker.cpp  cooldown_tracker.hpp  curl_raii.cpp  curl_raii.hpp  embedding_provider.hpp  failover_resolver.cpp  failover_resolver.hpp  http_provider_base.cpp  http_provider_base.hpp  llama_local_provider.cpp  llama_local_provider.hpp  llm_provider.hpp  openai_provider.cpp  openai_provider.hpp  provider_error.cpp  provider_error.hpp  provider_registry.cpp  provider_registry.hpp
rimeclaw/security/: exec_approval.cpp  exec_approval.hpp  sandbox.cpp  sandbox.hpp  tool_permissions.cpp  tool_permissions.hpp
rimeclaw/session/: session_maintenance.cpp  session_maintenance.hpp  session_manager.cpp  session_manager.hpp
rimeclaw/tools/: tool_chain.cpp  tool_chain.hpp  tool_registry.cpp  tool_registry.hpp
test/: CMakeLists.txt  test.cpp
